Styles cleanups. Fixed alignment issues

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -116,7 +116,7 @@ li {
 
 .container {
   width: 100%;
-  padding-right: 15px;
+  padding-right: 1vw;
   padding-left: 1vw;
   margin-bottom: 115px;
   video{
